<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/lay1">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number"
            android:inputType="phone" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showText"
            android:text="@string/show" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_phonelabel"
            android:text="@string/phone_number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_phonelabel"
            android:text="@string/nothing_entered"
            android:layout_marginLeft="4dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_marginTop="@dimen/MarginTopLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay2"
        android:id="@+id/lay3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_message"
            android:text="@string/tap_alert"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAlert"
            android:layout_below="@id/top_message"
            android:text="@string/alert"
            android:onClick="showAlert"/>

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="@dimen/MarginTopLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/lay3"
        android:id="@+id/lay4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_date"
            android:textSize="@dimen/choose_date_text_size"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_date"
                android:layout_marginTop="@dimen/button_margintop"
                android:text="@string/date_button"
                android:onClick="showDatePickerDialog"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_time"
                android:layout_marginTop="@dimen/button_margintop"
                android:layout_alignBottom="@id/button_date"
                android:layout_toRightOf="@id/button_date"
                android:text="@string/button_time"
                android:onClick="showTimePickerDialog"/>
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>

